se agrega eleccion del pc en las casillas con aleatoriedad

--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ p {
     justify-content: center;
 }
 input[type="button"]:disabled {
-    background-color: red;
+    background-color: var(--primary-color);
 }
 table {
     width: 200px;
@@ -87,6 +87,10 @@ td{
     width: 60px;
     height: 60px;
     border: 1px solid var(--text-color);
+    color: var(--text-color);
+    font-size: 2.4rem;
+    text-align: center;
+
 }
 .button_reiniciar{
     display: flex;
