--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ p {
     font-size: 2.6rem;
     text-align: center;
     justify-content: center;
+    cursor: pointer;
 }
 input[type="button"]:disabled {
     background-color: var(--primary-color);
